--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ bytes = "1.1.0"
 http = "0.2.6"
 thiserror = "1.0.30"
 url = "2.2.2"
+
+[dev-dependencies]
+pretty_assertions = "1.2.0"
+test-case = "2.0.1"
