--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ http = "0.2.6"
 thiserror = "1.0.30"
 url = "2.2.2"
 
+once_cell = "1.10.0"
+regex = "1.5.5"
+
 [dev-dependencies]
 pretty_assertions = "1.2.0"
 test-case = "2.0.1"
+tokio = { version = "1.17.0", features = ["macros"] }
