--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ bytes = "1.1.0"
 http = "0.2.6"
 once_cell = "1.10.0"
 regex = "1.5.5"
+serde = "1.0.136"
+serde_json = "1.0.79"
 thiserror = "1.0.30"
 url = "2.2.2"
 
