--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.17.0", optional = true, features = ["sync"] }
 futures-util = { version = "0.3.21", optional = true }
 
 [dev-dependencies]
+derive_builder = "0.11.1"
 pretty_assertions = "1.2.0"
 test-case = "2.0.1"
 tokio = { version = "1.17.0", features = ["macros"] }
