--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ url = "2.2.2"
 reqwest = { version = "0.11.10", optional = true }
 tokio = { version = "1.17.0", optional = true, features = ["sync"] }
 futures-util = { version = "0.3.21", optional = true }
+tracing = "0.1.32"
 
 [dev-dependencies]
 pretty_assertions = "1.2.0"
